 + Multi-layer maps can now contain map sources that come with MOBAC
    This allows to combine existing map sources with new overlays.
 + BeanShell map sources can be used if placed in the "mapsources" 
    sub-directory
 + All direcories used by MOBAC can be pre-configured via file 
    directories.ini in the MOBAC program directory

 1.8 final: (2010-10-31)
 + New map source: New Zealand Topographic Maps

 1.8 RC 1: (2010-10-23)
 + AlpineQuest handles tiles <> 256px and ellipsoid projections
 + New atlas format: Run.GPS Atlas
 ! Fixed map source: Emapi.pl

 1.8 beta 4: (2010-10-09)
 ~ Implemented logging for ImageWriter warnings
 ~ Display selected areas: adding a new map selection does no longer resets the 
    map selection and therefore the highlighted area does not change. 

 1.8 beta 3: (2010-10-02)
 ! Fixed: NullPointerException when renaming an GPX file entry
 ! MyTopo URL updated and fixed
 ~ Unnecessary restriction of RMaps / BigPlanet Tracks to zoom 17 removed
 + New map source: Microsoft Maps with hill shade
 ~ Custom tile settings now possible with SportsTracker
 + New atlas format: Osmdroid ZIP
 + New map source: SIGPAC Mercator (Spain only) - patch by susinho

 1.8 beta 2: (2010-09-13)
 + AlpineQuestMap atlas creator updated (patch by Camille) 
 + New map source: Navitel (Russian)
 ! GPS Sport Tracker: space removed in tile file name
 ! MyTopo URL updated 

 1.8 beta 1: (2010-08-24)
 ! Fixed PNG 256 color output
 + New atlas format: OruxMaps (Android)  
 + New atlas format: Glopus Map File (AFTrack and others)
 ~ BigPlanet SQL commit rate changed 
 ! #2963490 Using custom tile size with multi-layer maps creates black map 
    tiles
 + GPX file editor improved
 ~ Austrian Map removed (does not work anymore - unable to fix)
 + Yandex Map & Sat added (works only with selected atlas creators because of a 
    different projection category - Yandex uses an ellipsoid)
 ~ Map source change: Emapi.pl replaces Emapa.pl
 + New atlas format: PathAway